fix: scrollbar hiding on global css

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,6 +27,18 @@ html.dark {
     display: none; /* Chrome, Safari, Opera */
   }
 
+  /* Global scrollbar hiding */
+  * {
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+  }
+
+  *::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera */
+    width: 0;
+    height: 0;
+  }
+
   /* Help the user select text in the button, need this for the uilm extension edge cases */
   .button-text-select {
     -webkit-user-select: text;
